# ui_qml

./: .gitignore  ButtonToolInstruments.qml  CMakeLists.txt  CanvasSurcace.qml  Dockerfile  ListPreview.qml  Prova.qml  StatusBar.qml  main.cpp  main.qml  prova.cpp  prova.h  resource.qrc  statusBar.qml  textballoon.cpp  textballoon.h  updateModel.sh
.github/.workflows/: linux qt6.yml
.github/workflows/: linux qt6.yml
controller/: Controller.cpp  Controller.h
controller/ControllerAudio/: ControllerAudio.cpp  ControllerAudio.h
controller/ControllerCanvas/: ControllerCanvas.cpp  ControllerCanvas.h  WQMLCanvasComponent.cpp  WQMLCanvasComponent.h
controller/ControllerColor/: ControllerColor.h
controller/ControllerList/: ControllerList.cpp  ControllerList.h  WQMLItemListComponent.cpp
controller/ControllerListFiles/: ControllerListFiles.cpp  ControllerListFiles.h  ControllerListFilesFolder.cpp  ControllerListFilesFolder.h  Files.cpp  Files.h  Folder.cpp
controller/ControllerPageCounter/: ControllerPageCounter.cpp  ControllerPageCounter.h
controller/ControllerSettings/: ControllerSettings.h
controller/ControllerToolBar/: ControllerToolBar.cpp  ControllerToolBar.h  Tool.cpp  Tool.h
controller/controllerList/: controllerList.cpp  controllerList.h
src/: main.cpp  main.qml
src/controller/: Controller.cpp  Controller.h  controller.cpp
src/controller/ControllerAudio/: ControllerAudio.cpp  ControllerAudioPlayer.cpp  ControllerAudioPlayer.h  ControllerAudioRecorder.cpp  ControllerAudioRecorder.h  controlleraudioplayer.cpp  controlleraudioplayer.h
src/controller/ControllerCanvas/: ControllerCanvas.cpp  ControllerCanvas.h  ControllerPopupCanvas.cpp  ControllerPopupCanvas.h  WQMLCanvasComponent.cpp  WQMLCanvasComponent.h  WQMLCanvasComponentPage.cpp  WQMLCanvasComponentPage.h  WQMLCanvasComponentStroke.cpp  WQMLCanvasComponentStroke.h  WQMLCanvasHandler.cpp  WQMLCanvasHandler.h
src/controller/ControllerColor/: ControllerColor.cpp
src/controller/ControllerList/: ControllerList.cpp  ControllerList.h  WQMLItemListComponent.cpp  WQMLItemListComponent.h
src/controller/ControllerListFiles/: ControllerCommonFiles.h  ControllerCommonFiles.mm  ControllerListFiles.cpp  ControllerListFiles.h  ControllerListFilesFolder.cpp  Files.cpp  Folder.cpp  Folder.h  WQMLControllerListFiles.cpp  WQMLControllerListFiles.h  WQMLControllerListFolder.cpp  WQMLControllerListFolder.h
src/controller/ControllerPageCounter/: ControllerPageCounter.cpp  ControllerPageCounter.h
src/controller/ControllerSettings/: ControllerSettings.cpp  ControllerSettings.h
src/controller/ControllerToolBar/: ControllerDocument.cpp  ControllerDocument.h  ControllerToolBar.cpp  ControllerToolBar.h
src/controller/ControllerToolBar/Tool/: ToolController.cpp  ToolController.h  WQMLControllerHighlighter.cpp  WQMLControllerHighlighter.h  WQMLControllerPen.cpp  WQMLControllerPen.h  WQMLControllerRubber.cpp  WQMLControllerRubber.h
src/ios/: common.h  common.mm
src/test/controller/: ControllerTest.cpp
src/test/model/: test_VersionFileController.cpp
src/test/model/test_FileContainer/: test_MemReader.cpp  test_MemWriter.cpp
src/test/model/test_Scheduler/: test_Scheduler.cpp  test_WObject.cpp  test_WTask.cpp  test_WTimer.cpp
src/test/model/test_core/: test_ExactInteger.cpp  test_ExactNumber.cpp  test_PointTemplate.cpp  test_RectF.cpp  test_WAbstractList.cpp  test_WFile.cpp  test_WFlags.cpp  test_WHeap.cpp  test_WLine.cpp  test_WList.cpp  test_WListFast.cpp  test_WMap.cpp  test_WPair.cpp  test_WVector.cpp
src/test/model/test_core/pointer/: test_SharedPtr.cpp
src/test/model/test_file/: test_Directory.cpp  test_FileManager.cpp
src/test/model/test_touch/: test_Rubber.cpp
src/test/model/test_touch/dataTouch/: test_Document.cpp  test_Page.cpp  test_StrokeForPage.cpp  test_StrokeNormal.cpp
src/test/model/test_utils/: test_WCommonScript.cpp
src/ui/listOfFiles/: ListOfFiles.qml  ListOfFolders.qml  MainWindowListFile.qml
src/ui/pageCanvas/: ButtonColorToolBar.qml  ButtonToolInstruments.qml  CanvasSurface.qml  ListPreview.qml  MainWindow.qml  StatusBar.qml
src/ui/settings/: Settings.qml  SettingsButton.qml  SettingsPerformance.qml
ui/listOfFiles/: ListOfFiles.qml  ListOfFolders.qml  MainWindowListFile.qml
ui/pageCanvas/: ButtonColorToolBar.qml  ButtonToolInstruments.qml  CanvasSurface.qml  ListPreview.qml  MainWindow.qml  StatusBar.qml
ui/settings/: SettingFile.qml
uml/: .$Model.svg.bkp  .$Model.svg.dtmp
